# seqsampling_shared

./: .gitignore  README.md  pyproject.toml
configs/: example_enumeration.yaml  example_iterative.yaml  example_parallel.yaml  example_vllm.yaml  example_vllm_gemma.yaml
configs/model_configs/: README.md  gemma-3-12b-it.yaml  gemma-3-4b-it.yaml  gpt-oss-20b.yaml  llama-3.1-8b-instruct.yaml  qwen-3-4b-instruct-2507.yaml  qwen-3-4b-thinking-2507.yaml  qwen3-32b-instruct.yaml  qwen3-32b-thinking.yaml
configs/mt/: base_SFT_scenario.yaml  mt_multi_turn_please_translate_again.yaml  mt_multi_turn_please_translate_again_for_a_better.yaml  mt_multi_turn_please_translate_again_for_a_better_deside_if_change.yaml  mt_parallel.yaml
configs/vllm_config/: README.md  apptainer.yaml  local_python.yaml  vllm_server_runner.py
data/: example_prompts.txt  mt_demo_en_de.jsonl  mt_from_en.txt
data/wmt24p/: README.md  en-ar_EG.jsonl  en-ar_SA.jsonl  en-bg_BG.jsonl  en-bn_IN.jsonl  en-ca_ES.jsonl  en-cs_CZ.jsonl  en-da_DK.jsonl  en-de_DE.jsonl  en-el_GR.jsonl  en-es_MX.jsonl  en-et_EE.jsonl  en-fa_IR.jsonl  en-fi_FI.jsonl  en-fil_PH.jsonl  en-fr_CA.jsonl  en-fr_FR.jsonl  en-gu_IN.jsonl  en-he_IL.jsonl  en-hi_IN.jsonl  en-hr_HR.jsonl  en-hu_HU.jsonl  en-id_ID.jsonl  en-is_IS.jsonl  en-it_IT.jsonl  en-ja_JP.jsonl  en-kn_IN.jsonl  en-ko_KR.jsonl  en-lt_LT.jsonl  en-lv_LV.jsonl  en-ml_IN.jsonl  en-mr_IN.jsonl  en-nl_NL.jsonl  en-no_NO.jsonl  en-pa_IN.jsonl  en-pl_PL.jsonl  en-pt_BR.jsonl  en-pt_PT.jsonl  en-ro_RO.jsonl  en-ru_RU.jsonl  (+16 more)
data/wmttest2024_plus_doc/: get_doc_bitext.py
evaluation/mt/: README.md  metrics.example.json  metricx_smoke_config.json  pyproject.toml  run_eval_experiments_v6_ru_parallel.sh  run_metricx_smoke_test.sh
evaluation/mt/metricx/: pyproject.toml
evaluation/mt/src/mt_evaluation/: __init__.py  cli.py  config.py  pipeline.py  records.py
evaluation/mt/src/mt_evaluation/metrics/: __init__.py  base.py  comet.py  metricx.py
evaluation/mt/test_data/: metricx_smoke_samples.jsonl
evaluation/mt/test_outputs/metricx_smoke/: metricx24_ref_smoke.json
experiments/: README.md  check.py  check_nvcc_nodes.sh  run_all.sh
experiments/mt/: sweep_runner.py
experiments/parallel_vs_sequential/: README.md  run_mt_multi_turn_plus_doc_sweep.sh  run_mt_multi_turn_sweep.sh  run_mt_parallel_doc_sweep.sh  run_mt_parallel_sweep.sh
experiments/plots/: __init__.py  index_compat.py  plot_sweep_results.py  utils.py
pipelines/: README.md  langauges.py  pipeline.py  pipeline_vllm.py
pipelines/configs/: wmt24p.yaml  wmt24p_doc.yaml
scripts/: 01_generate_mt_example.sh  02_evaluate_mt_example.sh  install_envs.sh  process_real_data.py
src/active_mt_distill/: __init__.py  config.py  io.py
src/parseq_core/: enumeration.py  iterative.py  likelihood.py  main.py  multi_turn.py  parallel.py  prompt_payload.py  prompt_trace.py  sampling.py  sampling_config.py  scenario.py  vllm_server.py
synth_data/: README.md  plan.md
synth_data/configs/: exp_base.yaml
synth_data/data/: iterations  processed
synth_data/scripts/: export_lf_dataset.sh  prepare_data.sh  pull_llamafactory_apptainer.sh  run_llamafactory_sft.sh  (+1 more)
tests/: test_active_mt_distill_eval_only_pipeline.py  test_main_plot_parallel_runner.py  test_mt_evaluation_index_schema.py  test_mt_pipeline_override_precedence.py  test_scenario_driven_prompting.py  test_vllm_port_block_selection.py
(+105 files in other folders)
