[project]
name = "parallel-sequential-core"
version = "0.1.0"
description = "Core sampling runners for parallel/sequential generation workflows."
readme = "README.md"
requires-python = "==3.10.15"
dependencies = [
  "pydantic>=2.6.0",
  "hydra-core>=1.3.2",
  "datasets>=2.21.0,<4.0.0",
  "seqsampling @ git+https://github.com/serjtroshin/seqsampling.git",
  "setuptools>=68.0.0",
]

[project.optional-dependencies]
vllm = [
  "openai>=1.40.0",
  "vllm==0.11.1; platform_system == \"Linux\"",
  "transformers>=4.56.0,<5.0.0; platform_system == \"Linux\"",
  "torch==2.9.0+cu129; platform_system == \"Linux\"",
  "torchvision==0.24.0+cu129; platform_system == \"Linux\"",
  "torchaudio==2.9.0+cu129; platform_system == \"Linux\"",
]
openai = ["openai>=1.40.0"]
dev = ["pytest>=7.0"]
analysis = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "scikit-learn>=1.3",
  "networkx>=3.2",
  "umap-learn>=0.5.5",
  "unbabel-comet==2.2.4",
  "python-Levenshtein>=0.25.0",
]

[project.scripts]
parseq-core = "parseq_core.main:main"
parseq-core-vllm-server = "parseq_core.vllm_server:main"
parseq-core-likelihood = "parseq_core.likelihood:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }
torchaudio = { index = "pytorch-cu129" }
