[project]
name = "parallel-sequential-mt-evaluation"
version = "0.1.0"
description = "Minimal standalone MT evaluation environment for parallel_sequential outputs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "setuptools>=68.0.0,<81",
  "torch==2.7.0+cu128; platform_system == 'Linux'",
  "torchvision==0.22.0+cu128; platform_system == 'Linux'",
  "torchaudio==2.7.0+cu128; platform_system == 'Linux'",
  "unbabel-comet==2.2.4",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
mt-eval = "mt_evaluation.cli:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
