[project]
name = "parallel-sequential-metricx-env"
version = "0.1.0"
description = "Standalone MetricX runtime environment for parallel_sequential MT evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "setuptools>=68.0.0,<81",
  "numpy<2",
  "torch==2.7.0+cu128; platform_system == 'Linux'",
  "transformers[torch]==4.30.2",
  "sentencepiece==0.1.99",
  "protobuf==3.20.3",
  "datasets==2.13.1",
  "fsspec==2023.6.0",
  "pyarrow==12.0.1",
]

[build-system]
requires = ["setuptools>=68.0.0,<81"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
